# apps/core/docs/swagger.json
@@ -164,6 +164,9 @@
                 "active": {
                     "type": "boolean"
                 },
+                "app_last4": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -177,6 +180,9 @@
                     "type": "string"
                 },
                 "rotated_at": {
+                    "type": "string"
+                },
+                "signing_last4": {
                     "type": "string"
                 }
             }
